feat: add C# code search capabilities with Microsoft MCP SDK integration
  - Integrate Microsoft C# MCP SDK (ModelContextProtocol 0.3.0-preview.1) for native MCP support
  - Add Roslyn-based code analysis with MSBuild.Locator for solution/project loading
  - Implement WorkspaceManager with solution caching for improved performance
  - Create SymbolSearchService with comprehensive symbol search functionality
  - Add 5 new MCP tools for C# code analysis:
    * FindSymbolDefinitions - Search for symbols by name with type filtering
    * FindSymbolReferences - Find all references to a specific symbol
    * NavigateInheritanceHierarchy - Explore type inheritance and implementations
    * SearchSymbolsByPattern - Wildcard-based symbol search with namespace filtering
    * GetSymbolDocumentation - Extract XML documentation from symbols
  - Fix all Native AOT compatibility issues with source-generated JSON serialization
  - Update Program.cs to use MCP SDK's server capabilities instead of custom JSON-RPC
  - Add comprehensive error handling and logging throughout code analysis components
  - Create documentation for C# code search features (docs/CSharpCodeSearch.md)
  - Update README.md and CLAUDE.md with new features and usage examples
  - Maintain zero warnings/errors build status

  This integration enables powerful C# code exploration directly within Claude Code,
  allowing users to search symbols, find references, and navigate code hierarchies
  across their C# solutions and projects.

  BREAKING CHANGE: The MCP server now uses the official MCP SDK instead of the
  custom SimpleJsonRpcServer implementation. Existing MCP tool names remain unchanged.

--- a/tests/ContextKeeper.Tests/ContextKeeper.Tests.csproj
+++ b/tests/ContextKeeper.Tests/ContextKeeper.Tests.csproj
@@ -27,4 +27,9 @@
     <ProjectReference Include="../../src/ContextKeeper/ContextKeeper.csproj" />
   </ItemGroup>
 
+  <!-- Copy test data to output directory -->
+  <ItemGroup>
+    <None Include="TestData/**/*.*" CopyToOutputDirectory="PreserveNewest" />
+  </ItemGroup>
+
 </Project>
